--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 #home{
-    background: url() no repeat;
+    background: no-repeat url('') ;
     background-position: center;
     background-size: cover;
     height: 100vh;
     z-index:1;
 }
-#tsparticles{
+
+.tsparticles-canvas-el{
     position: absolute;
-    height: 100vh;
-    width:100vw;
+    height: 860;
+    width: 100vw;
 }
