--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -201,7 +201,7 @@ ul#nav li.current a { color: #0000FF; }
    color: #ccc;
 }
 #about .profile-pic {
-   position: relative;
+   position: absolute;
    width: 120px;
    height: 120px;
    border-radius: 100%;
